# try-mlx-lm

./: .gitignore  README.md  model.toml  pyproject.toml
src/: examples.toml  initial_experiment.py  mlx_model_handler.py
test/: README.md  test_mlx_model_handler.py
